--- a/Code Testing for Researchers/assert.tex
+++ b/Code Testing for Researchers/assert.tex
@@ -1,5 +1,12 @@
 \begin{frame}
-  \frametitle{Assertions}
+  \frametitle{Sanity Testing}
+  \begin{center}
+    {\LARGE\color{Base09}Does it make sense to continue \\with any other tests?}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Sanity Testing - Assertions}
   \begin{tikzpicture}[overlay]
     \node[lit,anchor=north west] (expr) at (2.5,2) {{\Large Is expression true?}};
     \node[bad,anchor=north west] (no) at (5.5,-2) {{\Large Abort}};
@@ -56,6 +63,10 @@
   }
     \end{lstlisting}
   \end{example}
+  \vspace{1cm}
+  \visible<2>{
+    {\hspace{1cm}\Large\color{Base09}There could be a lot of these...}
+  }
 \end{frame}
 
 \begin{frame}[fragile]
