--- a/Code Testing for Researchers/automation.tex
+++ b/Code Testing for Researchers/automation.tex
@@ -1,3 +1,31 @@
 \begin{frame}
   \frametitle{Automation}
+  {\large
+  There are two simple ways to achieve test automation:
+
+  \vspace{0.5cm}
+  {\color{Base09} Single binary}\\\hspace{0.5cm}Condense all tests into one binary.
+
+  \vspace{0.5cm}
+  {\color{Base09} Build system integration}\\\hspace{0.5cm}Augment the build system to run the tests.
+  }
+  \visible<2->{
+    \tikz[overlay] \draw[Base0B,line width=2pt] (-4.4,0.4) ellipse(4.8 and 0.8);
+  }
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Automation - Makefiles}
+  \begin{example}
+    \begin{lstlisting}
+  test_complex:        $(CC) ...
+  test_newton:         $(CC) ...
+  test_newton_complex: $(CC) ... 
+
+  check:
+       test_complex
+       test_newton
+       test_newton_complex
+    \end{lstlisting}
+  \end{example}
 \end{frame}
