--- a/Code Testing for Researchers/motivation.tex
+++ b/Code Testing for Researchers/motivation.tex
@@ -8,30 +8,58 @@
     \item I only made a small change, I don't know how it could have broken \emph{that}...
     \pause
     \item I'm sure I've fixed this before.
+    \pause
   \end{itemize}
+  \vspace{1cm}
+  {\Large\color{Base09}\hspace{2cm}\emph{Software testing can help}}
 \end{frame}
 
 \begin{frame}
   \frametitle{Motivation}
-  Tests will save you time.
   \begin{itemize}
-    \item Larger codes will have many systems.
-    \item Unexpected consequences.
-    \item Automation.
-    \item Less debugging later.
+    \item Testing will {\color{Base09}\emph{save}} you time.
+    \pause
+    \item Testing can prevent problems, not just identify them (TDD).
+    \pause
+    \item Testing will make your code more attractive to others.
+    \pause
+    \item Testing is invaluable in a team environment.
   \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{Time: Thinking Long Term}
   \begin{tikzpicture}[overlay]
-    \node[nrm,minimum width=10.7cm,anchor=north west] at (0,-3) {Library};
-    \node[nrm,minimum width=5.15cm,anchor=north west] at (0,-0.5) {Application};
-    \node[nrm,minimum width=5.15cm,anchor=north west] at (5.5,-0.5) {Library};
-    \node[nrm,minimum width=5.15cm,anchor=north west] at (5.5,2) {Application};
-    \node[single arrow,draw=none,fill=Base09,rotate=-90,anchor=north west] at (2.8,-1.9) {uses};
-    \node[single arrow,draw=none,fill=Base09,rotate=-90,anchor=north west] at (8.3,-1.9) {uses};
-    \node[single arrow,draw=none,fill=Base09,rotate=-90,anchor=north west] at (8.3,0.6) {uses};
+    \visible<1>{
+      \node[lit,minimum width=10.7cm,anchor=north west] at (0,-3) {Library};
+    }
+    \visible<2-5>{
+      \node[nrm,minimum width=10.7cm,anchor=north west] at (0,-3) {Library};
+    }
+    \visible<2->{
+      \node[single arrow,draw=none,fill=Base09,rotate=-90,anchor=north west] at (2.8,-1.9) {uses};
+    }
+    \visible<2>{
+      \node[lit,minimum width=5.15cm,anchor=north west] at (0,-0.5) {Application};
+    }
+    \visible<3->{
+      \node[nrm,minimum width=5.15cm,anchor=north west] at (0,-0.5) {Application};
+      \node[single arrow,draw=none,fill=Base09,rotate=-90,anchor=north west] at (8.3,-1.9) {uses};
+    }
+    \visible<3>{
+      \node[lit,minimum width=5.15cm,anchor=north west] at (5.5,-0.5) {Library};
+    }
+    \visible<4->{
+      \node[nrm,minimum width=5.15cm,anchor=north west] at (5.5,-0.5) {Library};
+      \node[single arrow,draw=none,fill=Base09,rotate=-90,anchor=north west] at (8.3,0.6) {uses};
+    }
+    \visible<4>{
+      \node[lit,minimum width=5.15cm,anchor=north west] at (5.5,2) {Application};
+    }
+    \visible<5->{
+      \node[nrm,minimum width=5.15cm,anchor=north west] at (5.5,2) {Application};
+      \node[nrm,fill=Base08,minimum width=10.7cm,anchor=north west] at (0,-3) {Modified Library};
+    }
   \end{tikzpicture}
 \end{frame}
 
@@ -41,16 +69,9 @@
   time savings. Also show complexity with stats on if conditionals.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Motivation}
-  Tests don't just idenitfy problems, they prevent them.
-
-  What here?
-\end{frame}
-
 \begin{frame}[fragile]
   \frametitle{Motivation}
-  Tests make your code more attractive.
+  \vspace{1cm}
   \epigraph{``Code without tests is broken by design.''}{--- \textup{Jacob Kaplan-Moss}, Django documentation}
 \end{frame}
 
