Cleaning up the motivation section on the testing webinar.

--- a/Code Testing for Researchers/main.tex
+++ b/Code Testing for Researchers/main.tex
@@ -188,12 +188,12 @@
 
 \frame{\titlepage}
 
-%% \input{motivation.tex}
+\input{motivation.tex}
 %% \input{testing_methods.tex}
 %% \input{static_analysis.tex}
 %% \input{assert.tex}
 %% \input{testing_levels.tex}
 %% \input{automation.tex}
-\input{code_coverage.tex}
+%% \input{code_coverage.tex}
 
 \end{document}
