--- a/Code Testing for Researchers/main.tex
+++ b/Code Testing for Researchers/main.tex
@@ -189,11 +189,13 @@
 \frame{\titlepage}
 
 \input{motivation.tex}
-%% \input{testing_methods.tex}
-%% \input{static_analysis.tex}
-%% \input{assert.tex}
-%% \input{testing_levels.tex}
-%% \input{automation.tex}
-%% \input{code_coverage.tex}
+\input{testing_methods.tex}
+\input{static_analysis.tex}
+\input{assert.tex}
+\input{testing_levels.tex}
+\input{automation.tex}
+\input{code_coverage.tex}
+\input{tdd.tex}
+\input{summary.tex}
 
 \end{document}
