--- a/Code Testing for Researchers/testing_levels.tex
+++ b/Code Testing for Researchers/testing_levels.tex
@@ -1,5 +1,48 @@
 \begin{frame}
   \frametitle{Testing Levels}
+  \begin{tikzpicture}[overlay]
+
+    \node[bkg,anchor=north west,text width=3.2cm,text depth=6cm,label=above:{\color{Base04}Static}] at (-0.5,2.3) {};
+    \node[bkg,anchor=north west,text width=6.8cm,text depth=6cm,label=above:{\color{Base04}Dynamic}] at (3.8,2.3) {};
+
+    \node[nrm2,short,anchor=north west] at (-0.2,1.9) {Reviews};
+    \node[nrm2,short,anchor=north west] at (-0.2,0.7) {Walkthroughs};
+    \node[nrm2,short,anchor=north west] at (-0.2,-0.5) {Inspections};
+    \node[nrm2,short,anchor=north west] at (-0.2,-1.7) {IDE (syntax)};
+    \node[nrm2,long,anchor=north west] (F) at (4.1,1.9) {Functional};
+    \node[nrm2,long,anchor=north west] (N) at (4.1,-1.6) {Non-functional};
+
+    \coordinate (o) at (6,0.7);
+    \coordinate (p) at (6,-2.8);
+    \coordinate (g) at (7.52,-3);
+
+    \node[lit,tiny,anchor=north west] (a) at (4.1,0.5)  {Unit};
+    \node[lit,tiny,anchor=north west] (b) at (5.1,-0.4) {Integration};
+    \node[lit,tiny,anchor=north west] (c) at (6.72,0.5)  {System};
+    \node[lit,tiny,anchor=north west] (d) at (7.8,-0.4) {Regression};
+    \node[nrm2,tiny,anchor=north west] (e) at (9.4,0.5)  {Sanity};
+
+    \node[nrm2,short,anchor=north west] at (-0.2,-2.9) {Analysis};
+
+    \node[nrm2,tiny,anchor=north west] (f) at (4.1,-3)  {Performance};
+    \node[nrm2,tiny,anchor=north west]     at (6.95,-3) {Usability};
+    \node[nrm2,tiny,anchor=north west] (h) at (9.18,-3)  {Security};
+
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (a);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (b);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (c);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (d);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (e);
+
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (f);
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (g);
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (h);
+
+  \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Testing Levels}
   \begin{tikzpicture}[overlay,shift={(1.5,-2.75)}]
     \visible<1,3->{
       \node[nrm,anchor=north west] at (-1.5,5) {{\Large Unit testing}};
@@ -48,6 +91,49 @@
       \draw[arr] (4.4,0) to (3.6,0);
       \node[bb,anchor=north west] at (5,3) {{\small Black-box}};
     }
+  \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Unit Testing}
+  \begin{tikzpicture}[overlay]
+
+    \node[bkg,anchor=north west,text width=3.2cm,text depth=6cm,label=above:{\color{Base04}Static}] at (-0.5,2.3) {};
+    \node[bkg,anchor=north west,text width=6.8cm,text depth=6cm,label=above:{\color{Base04}Dynamic}] at (3.8,2.3) {};
+
+    \node[nrm2,short,anchor=north west] at (-0.2,1.9) {Reviews};
+    \node[nrm2,short,anchor=north west] at (-0.2,0.7) {Walkthroughs};
+    \node[nrm2,short,anchor=north west] at (-0.2,-0.5) {Inspections};
+    \node[nrm2,short,anchor=north west] at (-0.2,-1.7) {IDE (syntax)};
+    \node[nrm2,long,anchor=north west] (F) at (4.1,1.9) {Functional};
+    \node[nrm2,long,anchor=north west] (N) at (4.1,-1.6) {Non-functional};
+
+    \coordinate (o) at (6,0.7);
+    \coordinate (p) at (6,-2.8);
+    \coordinate (g) at (7.52,-3);
+
+    \node[lit,tiny,anchor=north west] (a) at (4.1,0.5)  {Unit};
+    \node[nrm2,tiny,anchor=north west] (b) at (5.1,-0.4) {Integration};
+    \node[nrm2,tiny,anchor=north west] (c) at (6.72,0.5)  {System};
+    \node[nrm2,tiny,anchor=north west] (d) at (7.8,-0.4) {Regression};
+    \node[nrm2,tiny,anchor=north west] (e) at (9.4,0.5)  {Sanity};
+
+    \node[nrm2,short,anchor=north west] at (-0.2,-2.9) {Analysis};
+
+    \node[nrm2,tiny,anchor=north west] (f) at (4.1,-3)  {Performance};
+    \node[nrm2,tiny,anchor=north west]     at (6.95,-3) {Usability};
+    \node[nrm2,tiny,anchor=north west] (h) at (9.18,-3)  {Security};
+
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (a);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (b);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (c);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (d);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (e);
+
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (f);
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (g);
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (h);
+
   \end{tikzpicture}
 \end{frame}
 
@@ -457,6 +543,121 @@ with expansion:
 \end{frame}
 
 \begin{frame}
+  \frametitle{Python Unit Testing}
+  \begin{tabular}{p{3cm}|p{7cm}}
+    {\color{Base09}unittest} & Ships with Python, fully featured.\newline {\color{Base0D}\url{http://docs.python.org/2/library/unittest.html}} \vspace{0.1cm} \\
+    \hline
+    {\color{Base09}doctest} & Interesting take on unit testing, keeps tests with code.\newline {\color{Base0D}\url{http://docs.python.org/2/library/unittest.html}} \vspace{0.1cm} \\
+    \hline
+    \only<1>{
+      {\color{Base09}nose} & Based on unittest but eliminates boilerplate.\newline {\color{Base0D}\url{http://nose.readthedocs.org/en/latest}}
+    }
+    \only<2>{
+      {\color{Base09}nose}\hspace{1cm}{\color{Base0B}$\checkmark$} & Based on unittest but eliminates boilerplate.\newline {\color{Base0D}\url{http://nose.readthedocs.org/en/latest}}
+    }
+  \end{tabular}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Python Unit Testing}
+  \begin{example}
+    \begin{lstlisting}[style=Py]
+  def setup_func():
+    # Setup test fixtures.
+
+  def teardown_func():
+    # Teardown test fixtures.
+
+  @with_setup(setup_func, teardown_func)
+  def test_something():
+    assert my_func() == true
+
+  def test_something_else():
+    assert my_other_func() == true
+    \end{lstlisting}
+  \end{example}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Python Unit Testing}
+  \begin{block}{Running nose (autodiscovery)}
+    \vspace{0.1cm}
+    \hspace{0.2cm}{\ttfamily nosetests}
+    \vspace{0.2cm}
+  \end{block}
+  \begin{block}{Successful output}
+    \begin{verbatim}
+  ....
+  ----------------------
+  Ran 4 tests in 0.004s
+
+  OK
+    \end{verbatim}
+  \end{block}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Python Unit Testing}
+  \begin{block}{Failed output}
+    \begin{verbatim}
+F...
+======================================
+FAIL: nose_tests.test_something
+--------------------------------------
+Traceback (most recent call last):
+    assert my_func() == False
+AssertionError
+--------------------------------------
+Ran 4 tests in 0.018s
+FAILED (failures=1)
+    \end{verbatim}
+  \end{block}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Unit Testing}
+  \begin{tikzpicture}[overlay]
+
+    \node[bkg,anchor=north west,text width=3.2cm,text depth=6cm,label=above:{\color{Base04}Static}] at (-0.5,2.3) {};
+    \node[bkg,anchor=north west,text width=6.8cm,text depth=6cm,label=above:{\color{Base04}Dynamic}] at (3.8,2.3) {};
+
+    \node[nrm2,short,anchor=north west] at (-0.2,1.9) {Reviews};
+    \node[nrm2,short,anchor=north west] at (-0.2,0.7) {Walkthroughs};
+    \node[nrm2,short,anchor=north west] at (-0.2,-0.5) {Inspections};
+    \node[nrm2,short,anchor=north west] at (-0.2,-1.7) {IDE (syntax)};
+    \node[nrm2,long,anchor=north west] (F) at (4.1,1.9) {Functional};
+    \node[nrm2,long,anchor=north west] (N) at (4.1,-1.6) {Non-functional};
+
+    \coordinate (o) at (6,0.7);
+    \coordinate (p) at (6,-2.8);
+    \coordinate (g) at (7.52,-3);
+
+    \node[nrm2,tiny,anchor=north west] (a) at (4.1,0.5)  {Unit};
+    \node[lit,tiny,anchor=north west] (b) at (5.1,-0.4) {Integration};
+    \node[nrm2,tiny,anchor=north west] (c) at (6.72,0.5)  {System};
+    \node[nrm2,tiny,anchor=north west] (d) at (7.8,-0.4) {Regression};
+    \node[nrm2,tiny,anchor=north west] (e) at (9.4,0.5)  {Sanity};
+
+    \node[nrm2,short,anchor=north west] at (-0.2,-2.9) {Analysis};
+
+    \node[nrm2,tiny,anchor=north west] (f) at (4.1,-3)  {Performance};
+    \node[nrm2,tiny,anchor=north west]     at (6.95,-3) {Usability};
+    \node[nrm2,tiny,anchor=north west] (h) at (9.18,-3)  {Security};
+
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (a);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (b);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (c);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (d);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (e);
+
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (f);
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (g);
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (h);
+
+  \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
   \frametitle{Integration Testing}
   \vspace{4cm}
   {\Large\color{Base09}Do separate classes/functions interact as they should?}
@@ -529,6 +730,49 @@ with expansion:
   }
     \end{lstlisting}
   \end{example}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Unit Testing}
+  \begin{tikzpicture}[overlay]
+
+    \node[bkg,anchor=north west,text width=3.2cm,text depth=6cm,label=above:{\color{Base04}Static}] at (-0.5,2.3) {};
+    \node[bkg,anchor=north west,text width=6.8cm,text depth=6cm,label=above:{\color{Base04}Dynamic}] at (3.8,2.3) {};
+
+    \node[nrm2,short,anchor=north west] at (-0.2,1.9) {Reviews};
+    \node[nrm2,short,anchor=north west] at (-0.2,0.7) {Walkthroughs};
+    \node[nrm2,short,anchor=north west] at (-0.2,-0.5) {Inspections};
+    \node[nrm2,short,anchor=north west] at (-0.2,-1.7) {IDE (syntax)};
+    \node[nrm2,long,anchor=north west] (F) at (4.1,1.9) {Functional};
+    \node[nrm2,long,anchor=north west] (N) at (4.1,-1.6) {Non-functional};
+
+    \coordinate (o) at (6,0.7);
+    \coordinate (p) at (6,-2.8);
+    \coordinate (g) at (7.52,-3);
+
+    \node[nrm2,tiny,anchor=north west] (a) at (4.1,0.5)  {Unit};
+    \node[nrm2,tiny,anchor=north west] (b) at (5.1,-0.4) {Integration};
+    \node[lit,tiny,anchor=north west] (c) at (6.72,0.5)  {System};
+    \node[nrm2,tiny,anchor=north west] (d) at (7.8,-0.4) {Regression};
+    \node[nrm2,tiny,anchor=north west] (e) at (9.4,0.5)  {Sanity};
+
+    \node[nrm2,short,anchor=north west] at (-0.2,-2.9) {Analysis};
+
+    \node[nrm2,tiny,anchor=north west] (f) at (4.1,-3)  {Performance};
+    \node[nrm2,tiny,anchor=north west]     at (6.95,-3) {Usability};
+    \node[nrm2,tiny,anchor=north west] (h) at (9.18,-3)  {Security};
+
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (a);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (b);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (c);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (d);
+    \path[draw,color=Base06,-latex] (F) |- (o) -| (e);
+
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (f);
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (g);
+    \path[draw,color=Base06,-latex] (N) |- (p) -| (h);
+
+  \end{tikzpicture}
 \end{frame}
 
 \begin{frame}
