--- a/Code Testing for Researchers/testing_levels.tex
+++ b/Code Testing for Researchers/testing_levels.tex
@@ -615,7 +615,7 @@ FAILED (failures=1)
 \end{frame}
 
 \begin{frame}
-  \frametitle{Unit Testing}
+  \frametitle{Integration Testing}
   \begin{tikzpicture}[overlay]
 
     \node[bkg,anchor=north west,text width=3.2cm,text depth=6cm,label=above:{\color{Base04}Static}] at (-0.5,2.3) {};
@@ -703,14 +703,14 @@ FAILED (failures=1)
   // Example function used with the Newton
   // -Raphson solver.
   //
-  //   x^3 - x - 3
+  //   x^2 - 4
   //
   template< class T >
   struct function
     : public std::unary_function<T>
   {
     T operator()( T x ) const {
-      return x*x*x - x - T( 3 );
+      return x*x - T( 4 );
     }
   };
     \end{lstlisting}
@@ -722,18 +722,18 @@ FAILED (failures=1)
   \begin{example}
     \begin{lstlisting}[style=C]
   TEST_CASE( "newton/complex" ) {
-    complex x1( 0.0 ), x2( 0.0 );
+    complex x1( 1.0 ), x2( 3.0 );
     function f;
-    REQUIRE( newton( f, x1, x2, 0.5 ) == 0 );
-    REQUIRE( newton( f, x1, x2, 0 )   == 0 );
-    REQUIRE( newton( f, x1, x2, 1 )   == 0 );
+    REQUIRE( newton( f, x1, x2, 1 ) == 2 );
+    REQUIRE( newton( f, x1, x2, 3 ) == 2 );
+    REQUIRE( newton( f, x1, x2, 2 ) == 2 );
   }
     \end{lstlisting}
   \end{example}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Unit Testing}
+  \frametitle{System Testing}
   \begin{tikzpicture}[overlay]
 
     \node[bkg,anchor=north west,text width=3.2cm,text depth=6cm,label=above:{\color{Base04}Static}] at (-0.5,2.3) {};
