--- a/tao/ui/proposal.tex
+++ b/tao/ui/proposal.tex
@@ -7,7 +7,7 @@
 }
 \date{\today}
 
-\documentclass[12pt]{scrartcl}
+\documentclass[12pt]{article}
 \usepackage{color}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{amsmath}
@@ -17,9 +17,13 @@
 \usepackage{listings}
 \usepackage{hyperref}
 \usepackage{pgfgantt}
-%% \usepackage[scaled]{beramono}
-%% \renewcommand*\familydefault{\ttdefault}
-%% \usepackage[Tl]{fontenc}
+\usepackage{microtype}
+\usepackage{float}
+\usepackage[T1]{fontenc}
+\usepackage[scaled]{beramono}
+
+\newcommand\Small{\fontsize{9}{9.2}\selectfont}
+\newcommand*\LSTfont{\Small\ttfamily\SetTracking{encoding=*}{-60}\lsstyle}
 
 \definecolor{Base00}{HTML}{151515}
 \definecolor{Base01}{HTML}{202020}
@@ -48,7 +52,7 @@
   showstringspaces=false,
   formfeed=\newpage,
   tabsize=4,
-  basicstyle=\footnotesize\ttfamily,
+  basicstyle=\LSTfont,
   commentstyle=\color{Base08}\itshape,
   keywordstyle=\color{Base0D},
   stringstyle=\color{Base0B},
@@ -62,7 +66,7 @@
   showstringspaces=false,
   formfeed=\newpage,
   tabsize=4,
-  basicstyle=\footnotesize\ttfamily,
+  basicstyle=\LSTfont,
   commentstyle=\color{Base08}\itshape,
   keywordstyle=\color{Base0D},
   stringstyle=\color{Base0B},
@@ -74,10 +78,63 @@
 \begin{document}
 \maketitle
 
+\section{Why Django}
+
+Instead of doing a full analysis of PHP (and whatever frameworks it has available) vs. Python
+and Django I decided to leverage the available resources online. There are quite a lot of
+existing comparisons. I'll try to summarize a few of them below.
+
+\begin{description}
+\item \href{http://stackoverflow.com/questions/5285035/beginner-friendly-php-or-django}{Beginning PHP or Django} A question on Stack Overflow about choosing PHP or Django. The top answer
+recommends Django, highlighting the excellent documentation as a reason.
+\item \href{http://onstartups.com/tabid/3339/bid/20493/Why-PHP-Is-Fun-and-Easy-But-Python-Is-Marriage-Material.aspx}{Django in start-ups} The person who made HubSpot talks about why they
+chose Django as their framework. Half way down there is a list of dot-points about trade-offs
+which is pretty interesting. Also, in the comments there are a few people mentioning that they
+are PHP developers actively switching to Python/Django.
+\item \href{http://chriskief.com/2012/12/14/time-for-a-switch-php-symfony2-vs-python-django/}{Another comparison} This is another person who analyzed PHP and Django and chose Django.
+\item \href{http://blog.sznapka.pl/modern-frameworks-comparison/}{Tech comparison} This is
+an interesting one that attempts to look at speed and development costs with various frameworks.
+It concludes that there is no clear winner, bearing in mind this is coming from a seasoned
+PHP developer. In addition, at the bottom there is a follow-up showing that Django when
+configured correctly (mod\_wsgi + cache) is approximately 2x faster than PHP.
+\item \href{http://stackoverflow.com/questions/1852876/django-vs-phpframework}{Another Stack Overflow} Another Django vs PHP, also choosing Django and reporting back that they believe
+they made the right choice some 9 months later.
+\item \href{http://techblog.stickyworld.com/abandoning-php-for-python.html}{Reflecting poorly on PHP} This person again talking about their switch to Django.
+\item \href{http://www.reddit.com/r/Python/comments/23jbeq/python\_uses\_why\_python\_vs\_php/}{Longtime PHP user} This person talks about their emerging preference for Python vs PHP. Has
+a good list of pros of using Python.
+\item \href{https://www.udemy.com/blog/modern-language-wars/}{Language comparison} While
+not a comparison of Django directly, this one looks at Python vs PHP. One interesting thing
+to note is the popularity comparisons. They show that while PHP has a currently greater
+popularity, Python's popularity is increasing quite a lot faster, and also that Python is
+currently the single most discussed language. It's also from 2012, so is a little dated.
+\end{description}
+
+The reasonably general consensus between developers is that PHP is easy and capable, but
+Django provides a structure for good programming practices. As a matter of fact,
+I had trouble finding any very positive reviews of PHP in the Django vs. PHP comparisons,
+apart from those that suggest PHP is more market favorable, which appears to be true. Having
+said that there are people who comment that there are good PHP web frameworks, and I'm sure
+this is true, but it does seem that there is a strong turn towards Python/Django.
+
+It seems to me that there is no really clear reason to switch from Django to anything else,
+especially just PHP without considering an actual PHP web framework. This is all compounded
+by the fact that we already have various sections of Python/Django code that we can pull
+across. And, as Darren suggested, we can progress with the
+current setup in an incremental approach (beginning with the UI modules and moving on to
+the remaining functionality later on).
+
+One last thing, I think it's worth mentioning that my personal preference is Django. I have
+no specific issue with PHP at all, but I understand the philosophy that Django uses and can
+quickly develop and work with Django projects. To achieve the same level of understanding
+using PHP would take time. Sure, I would be able to start programming in a PHP framework
+very quickly, but we would be at risk once again of possibly poorly designed code due to
+my not having the same appreciation for the design philosophy as I do with Django. Just thought
+that should be mentioned, especially if it may be that I will be doing the work on the UI.
+
 \section{UI Requirements}
 
 \begin{description}
-\item[Modularity] Each UI module should be logically independant from the others. This
+\item[Modularity] Each UI module should be logically independent from the others. This
   does not mean that there can be no interaction between the modules, but the interfaces
   should be considered and clean. A UI developer should be able to create a new module and
   only need to use the prescribed interface mechanisms to extract and output all required
@@ -89,7 +146,7 @@
 \item[DRY] Currently the UI system has many repeated implementations of system logic. These
   are often using different libraries (`knockout` for example). Observing a strict ``Don't
   Repeat Yourself'' principle will greatly improve clarity and maintainability.
-\item[Simplicity] In order to minimise maintenance overhead we need to refactor and hide as
+\item[Simplicity] In order to minimize maintenance overhead we need to refactor and hide as
   much of the ``busy work'' as possible. We should provide a set of tested core routines to perform
   common operations and keep the implementations of the actual UI modules to a minimum.
 \end{description}
@@ -131,23 +188,43 @@ other modules is removed, eliciting a strongly modular environment.
 
 In order to satisfy the DRY principle, we can, for the time being, validate input server-side.
 In the future we can look to automatically generate Knockout validation strings and JavaScript
-by using Python's builtin AST features. This way we also have a natural fallback to server-side
+by using Python's built-in AST features. This way we also have a natural fallback to server-side
 validation in the case of a JavaScript disabled browser.
 
 From the example Python snippets below, and considering the existing code, it will be obvious
 how much of a reduction in both boilerplate and required code will be provided by the proposed
-system.
+system. These snippets don't reflect the whole implementation, they are intended to show the
+important concepts in the redesign (i.e. the exports and requirements).
 
+\begin{figure}[H]
 \lstinputlisting[style=Py]{forms_lightcone.py}
+\caption{Lightcone example form.}
+\end{figure}
+
+\begin{figure}[H]
 \lstinputlisting[style=Py]{forms_sed.py}
+\caption{SED example form.}
+\end{figure}
+
+\begin{figure}[H]
 \lstinputlisting[style=Py]{forms_filter.py}
+\caption{Filter example form.}
+\end{figure}
+
+\begin{figure}[H]
+\lstinputlisting[style=Py]{forms_image.py}
+\caption{Image example form.}
+\end{figure}
 
 \section{The View Component}
 
 The new system would require only very simple views to support the UI modules. All modules
 available from a particular view need to be instantiated, evaluated and returned.
 
+\begin{figure}[H]
 \lstinputlisting[style=Py]{views.py}
+\caption{Example TAO view.}
+\end{figure}
 
 \section{Template Rendering}
 
@@ -159,28 +236,68 @@ with the visual appearance of the site.
 
 \section{Task Breakdown}
 
-\begin{figure}[ftbp]
+\begin{figure}[H]
 \begin{center}
 \begin{ganttchart}[
     hgrid,vgrid,
     x unit=4mm,
-    time slot format=isodate
-]{2015-01-02}{2015-01-30}
-\gantttitlecalendar{year,month,week,weekday} \\
-\ganttbar{Preparation}{2015-01-03}{2015-01-03} \\
-\ganttlinkedbar{New Django}{2015-01-03}{2015-01-04} \\
-\ganttlinkedbar{Update DB}{2015-01-05}{2015-01-06} \\
-\ganttlinkedbar{Lightcone}{2015-01-07}{2015-01-12} \\
-\ganttlinkedbar{SED}{2015-01-13}{2015-01-15} \\
-\ganttlinkedbar{Filter}{2015-01-16}{2015-01-17} \\
-\ganttlinkedbar{Selection}{2015-01-18}{2015-01-19} \\
-\ganttlinkedbar{SQL}{2015-01-20}{2015-01-22} \\
-\ganttlinkedbar{Premade}{2015-01-23}{2015-01-24} \\
-\ganttlinkedbar{Views}{2015-01-23}{2015-01-24} \\
-\ganttlinkedbar{Templates}{2015-01-25}{2015-01-29} \\
+    y unit chart=0.55cm,
+    time slot format=isodate,
+    bar label font=\footnotesize
+]{2015-01-01}{2015-01-31}
+\gantttitlecalendar{year,month,week} \\
+\ganttbar{Prepare repository}{2015-01-03}{2015-01-03} \\
+\ganttlinkedbar{Update Django}{2015-01-03}{2015-01-03} \\
+\ganttlinkedbar{Make fixture}{2015-01-03}{2015-01-03} \\
+\ganttlinkedbar{Redesign models}{2015-01-04}{2015-01-05} \\
+\ganttlinkedbar{Migrate DB}{2015-01-05}{2015-01-05} \\
+\ganttlinkedbar{Test models}{2015-01-05}{2015-01-06} \\
+\ganttlinkedbar{Form design}{2015-01-07}{2015-01-07} \\
+\ganttlinkedbar{XML handler}{2015-01-07}{2015-01-09} \\
+\ganttlinkedbar{Templatetags}{2015-01-10}{2015-01-10} \\
+\ganttlinkedbar{HTML}{2015-01-10}{2015-01-11} \\
+\ganttlinkedbar{Testing}{2015-01-11}{2015-01-12} \\
+\ganttlinkedbar{SED}{2015-01-13}{2015-01-13} \\
+\ganttlinkedbar{SED testing}{2015-01-13}{2015-01-14} \\
+\ganttlinkedbar{Filter}{2015-01-15}{2015-01-15} \\
+\ganttlinkedbar{Filter testing}{2015-01-15}{2015-01-16} \\
+\ganttlinkedbar{Select}{2015-01-17}{2015-01-17} \\
+\ganttlinkedbar{Select testing}{2015-01-17}{2015-01-18} \\
+\ganttlinkedbar{SQL}{2015-01-19}{2015-01-19} \\
+\ganttlinkedbar{SQL testing}{2015-01-19}{2015-01-20} \\
+\ganttlinkedbar{Premade}{2015-01-21}{2015-01-21} \\
+\ganttlinkedbar{Premade testing}{2015-01-21}{2015-01-22} \\
+\ganttlinkedbar{Aux. systems}{2015-01-23}{2015-01-25} \\
+\ganttlinkedbar{Testing}{2015-01-26}{2015-01-29} \\
 \end{ganttchart}
 \end{center}
-\caption{Task Breakdown}
+\caption{Work breakdown.}
 \end{figure}
+
+All of the above is on a pretty aggressive schedule. While I think it's possible
+to achieve that time-line, it would require 100% of my time for that period, which
+is most likely impossible.
+
+\section{Personal Recommendations}
+
+So, I think we have three realistic options:
+
+\begin{enumerate}
+\item Continue with Django, rework existing code base incrementally. I can work on this
+      immediately.
+\item Amr rewrites the code base in a PHP framework when available.
+\item Hire an experienced/expert PHP developer to rewrite framework.
+\end{enumerate}
+
+There are two points worth mentioning:
+
+\begin{itemize}
+\item The reason I've not recommended I proceed with rewriting the code in a PHP framework
+      is that I feel my experience with PHP is not sufficient to provide a guarantee-ably 
+      well designed system in a timely fashion.
+\item I've also not mentioned hiring a Django developer as even an experienced Django developer
+      would struggle with interpreting the code we already have. Seeing as I've already had
+      the pleasure of deconstructing it I've already got a handle on it.
+\end{itemize}
 
 \end{document}
