Have most of the base functionality done, now working on actually getting some slides sorted.

--- a/tao/priorities_2014.tex
+++ b/tao/priorities_2014.tex
@@ -96,7 +96,7 @@ engineery perspective, which will likely be quite evident.
     an automated system for testing this would be invaluable. Getting
     any kind of error from a web UI can be exceptionally frustrating
     and can be, in my experience, the sole cause of abandoning use of
-    a site.
+    a site, especially when there are alternatives available.
   \item[Extend TAO with new features] \hfill \\
     Not too sure what features should be scheduled next, but I would
     say that ensuring we have a solid foundation to work on is more
